Adding element to render webcam

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>JS Facial Detection</title>
 </head>
 <body>
-    
+
+    <!-- A the video element to render our webcam-->
+    <video id="video", width="720", height="560", autoplay muted></video>
 </body>
 </html>
