--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>JS Facial Detection</title>
+    <script defer src="face-api.min.js"></script>
+    <script defer src="script.js"></script>
     <style>
         /* Centering the camera to the middle of the screen*/ 
         body {
@@ -19,8 +21,7 @@
     </style>
 </head>
 <body>
-
     <!-- A the video element to render our webcam-->
-    <video id="video", width="720", height="560", autoplay muted></video>
+    <video id="video" width="720" height="560" autoplay muted></video>
 </body>
 </html>
