--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             justify-content: center;
             align-items: center;
         }
+        /* Putting the canvas above the video */
+        canvas {
+            position: absolute;
+        }
     </style>
 </head>
 <body>
